--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,13 @@ header {
     text-align: center;
     background-color: bisque;
 }
+
+main {
+    display: flex;
+    flex-direction: row;
+}
+
+div {
+    height: 50%;
+    width: 50%;
+}
