--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,15 @@ header {
 
 main {
     display: flex;
-    flex-direction: row;
+    flex-direction: row;  
+    background-color: bisque;
 }
 
-div {
-    height: 50%;
-    width: 50%;
+aside {
+    text-align: center;
+    background-color: bisque;
+}
+
+footer {
+    background-color: bisque;
 }
